# multiplayer-rs

./: Cargo.toml
client/: Cargo.toml
client/src/: client_logic.rs  lib.rs  main.rs  multiplayer.rs  stream.rs
host/: Cargo.toml
host/src/: echo.rs  lib.rs  multiplayer.rs  server.rs  track.rs
src/: entry.rs  host.rs  lib.rs  main.rs  multiplayer.rs  playlist.rs  settings.rs  track.rs
src/client/: client.rs  connection.rs
src/entry/: entry.rs
src/host/: host.rs  server.rs  track.rs
