[package]
name = "multiplayer"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["default", "smol"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
iced_aw = { version = "0.12.2" }
rfd = "0.15.3"
wasapi = "0.19.0"
sysinfo = "0.35.2"
kira = "0.10.8"