[package]
name = "multiplayer"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release."*"]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
rodio = "0.21.0"
opus = "0.3.0"
iced = { version = "0.13.1", features = ["default", "tokio"] }
iced_aw = { version = "0.12.2", default-features = false, features = ["tabs"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
bytes = "1.10.1"
serde_json = "1.0.140"
rfd = "0.15.3"
wasapi = "0.19.0"
sysinfo = "0.36.1"
kira = "0.10.8"
anyhow = "1.0.98"
local-ip-address = "0.6.5"
