[package]
name = "multiplayer-client"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release."*"]
opt-level = 3

[dependencies]
rodio = "0.21.0"
opus = "0.3.0"
iced = "0.13.1"
message-io = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
