[package]
name = "multiplayer-client"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release."*"]
opt-level = 3

[dependencies]
rodio = "0.21.0"
opus = "0.3.0"
iced = { version = "0.13.1", features = ["default", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
