[package]
name = "multiplayer-host"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release."*"]
opt-level = 3

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["default", "smol"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
iced_aw = { version = "0.12.2" }
rfd = "0.15.3"
wasapi = "0.19.0"
sysinfo = "0.35.2"
kira = "0.10.8"
opus = "0.3.0"
anyhow = "1.0.98"
message-io = "0.19.0"
bincode = { version = "2.0.1" , features = ["serde"]}
reqwest = { version = "0.12.22", features = ["blocking"] }
local-ip-address = "0.6.5"