[package]
name = "multiplayer-host"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release."*"]
opt-level = 3

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["default", "tokio"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rfd = "0.15.3"
wasapi = "0.19.0"
sysinfo = "0.36.1"
kira = "0.10.8"
opus = "0.3.0"
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }